--- a/index.html
+++ b/index.html
@@ -1,128 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<title>Sort your favorite games!</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<style>
-		* { box-sizing: border-box; }
-		html { font: 100%/1.4 system-ui, sans-serif; }
-		body { margin: 0; }
-		a { color: currentColor; }
-		.hidden { display: none; }
-		#wrapper { width: 100%; padding: 0 1rem; max-width: 70ch; margin: 1rem auto; }
-		.intro h2 { margin: 0 0 0.5rem 0; }
-		.intro button { float: right; vertical-align: middle; }
-		.intro:nth-child(3) { padding-bottom: 1rem; border-bottom: 1px solid #bbb; margin-bottom: 2rem; }
-		.intro textarea { display: block; width: 100%; resize: vertical; background-color: #f4f4f4; font-size: 100%; font-family: ui-monospace, monospace; line-height: 1.25; min-height: 8rem; padding: 0.1em 0.25em; margin-bottom: 0.5rem; }
-		.intro #add-custom { float: none; }
-		#main-table { width: 100%; margin: 0 auto; }
-		#main-table #battle-number p { text-align: center; margin: 0 0 0.25rem 0; }
-		#main-table ul { display: flex; justify-content: space-between; padding: 0; }
-		#main-table li { flex-basis: 32%; min-height: 8rem; border: 1px solid #bbb; padding: 0.5em; list-style: none; text-align: center; display: flex; cursor: pointer; user-select: none; transition: border 0.2s ease; flex-direction: column; justify-content: center; }
-		#main-table li:hover { border-color: #888; }
-		#main-table li p { width: 100%; align-self: center; }
-		#result-field ol { width: 100%; margin: 0 auto; counter-reset: ranking 0; }
-		#result-field li { padding-left: 0.5rem; border-bottom: 1px solid #eee; margin-bottom: 0.25rem; padding-bottom: 0.25rem; counter-increment: ranking; }
-		#result-field li::marker { color: #000; content: counter(ranking) "."; }
-		@media all and (min-width: 60em) {
-			#wrapper { margin-top: 3rem; }
-			#main-table, #result-field ol { width: 60%; }
-		}
-	</style>
+    <meta charset="utf-8" />
+    <title>Sort your favorite games!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+        * { box-sizing: border-box; }
+        html { font: 100%/1.4 system-ui, sans-serif; }
+        body { margin: 0; }
+        a { color: currentColor; }
+        .hidden { display: none; }
+        #wrapper { width: 100%; padding: 0 1rem; max-width: 70ch; margin: 1rem auto; }
+        .intro h2 { margin: 0 0 0.5rem 0; }
+        .intro button { float: right; vertical-align: middle; }
+        .intro:nth-child(3) { padding-bottom: 1rem; border-bottom: 1px solid #bbb; margin-bottom: 2rem; }
+        .intro textarea { display: block; width: 100%; resize: vertical; background-color: #f4f4f4; font-size: 100%; font-family: ui-monospace, monospace; line-height: 1.25; min-height: 8rem; padding: 0.1em 0.25em; margin-bottom: 0.5rem; }
+        .intro #add-custom { float: none; }
+        #main-table { width: 100%; margin: 0 auto; }
+        #main-table #battle-number p { text-align: center; margin: 0 0 0.25rem 0; }
+        #main-table ul { display: flex; justify-content: space-between; padding: 0; }
+        #main-table li { flex-basis: 32%; min-height: 8rem; border: 1px solid #bbb; padding: 0.5em; list-style: none; text-align: center; display: flex; cursor: pointer; user-select: none; transition: border 0.2s ease; flex-direction: column; justify-content: center; }
+        #main-table li:hover { border-color: #888; }
+        #main-table li p { width: 100%; align-self: center; }
+        #result-field ol { width: 100%; margin: 0 auto; counter-reset: ranking 0; }
+        #result-field li { padding-left: 0.5rem; border-bottom: 1px solid #eee; margin-bottom: 0.25rem; padding-bottom: 0.25rem; counter-increment: ranking; }
+        #result-field li::marker { color: #000; content: counter(ranking) "."; }
+        @media all and (min-width: 60em) {
+            #wrapper { margin-top: 3rem; }
+            #main-table, #result-field ol { width: 60%; }
+        }
+    </style>
 </head>
 <body>
-	<div id="wrapper">  
+    <div id="wrapper">
+        <div class="intro">
+            <h2><span>What is this?</span><button class="toggle-detail">show&hairsp;/&hairsp;hide</button></h2>
+            <div class="text hidden">
+                <p>This sorter lets you rank your favorite games by comparing them in battles. Click on the game you prefer or choose "I feel the same way about both".</p>
+            </div>
+        </div>
+        <div class="intro">
+            <h2><span>Ok, how do I use this?</span><button class="toggle-detail">show&hairsp;/&hairsp;hide</button></h2>
+            <div class="text hidden">
+                <p>Just click on the name of whichever game you like more! You can also add your own games below.</p>
+            </div>
+        </div>
+        <div class="intro">
+            <h2><span>Add your own games!</span><button class="toggle-detail">show&hairsp;/&hairsp;hide</button></h2>
+            <div class="text hidden">
+                <textarea id="custom-words"></textarea>
+                <button id="add-custom">Use</button>
+            </div>
+        </div>
 
-		<div class="intro">
-			<h2>
-				<span>What is this?</span>
-				<button class="toggle-detail">show&hairsp;/&hairsp;hide</button>
-			</h2>
+        <div id="main-table">
+            <div id="battle-number"></div>
+            <ul>
+                <li id="left-field" class="sort-field" data-amount="-1"></li>
+                <li id="middle-field" class="sort-field" data-amount="0"><p>I feel the same way about both</p></li>
+                <li id="right-field" class="sort-field" data-amount="1"></li>
+            </ul>
+        </div>
 
-			<div class="text hidden">
-				<p>This sorter lets you rank your favorite games by comparing them in battles. Click on the game you prefer or choose "I feel the same way about both".</p>
-			</div>
-		</div>
-		
-		<div class="intro">
-			<h2>
-				<span>Ok, how do I use this?</span>
-				<button class="toggle-detail">show&hairsp;/&hairsp;hide</button>
-			</h2>
+        <div id="result-field"></div>
 
-			<div class="text hidden">
-				<p>Just click on the name of whichever game you like more! You can also add your own games below.</p>
-			</div>
-		</div>
+        <button onclick="ranks.reset()">Reset</button>
 
-		<div class="intro">
-			<h2>
-				<span>Add your own games!</span>
-				<button class="toggle-detail">show&hairsp;/&hairsp;hide</button>
-			</h2>
+        <script>
+        'use strict';
 
-			<div class="text hidden">
-				<textarea id="custom-words"></textarea>
-				<button id="add-custom">Use</button>
-			</div>
-		</div>
+        // Pelilista
+        const games = [
+            "Clair Obscur: Expedition 33", "Kingdom Come: Deliverance 2", "Undertale", "Deltarune", "Portal 2", 
+            "Silent Hill 2", "Assassin's Creed II", "Assassin's Creed IV: Black Flag", "Chrono Trigger", 
+            "Alan Wake", "Fable", "Minecraft", "Astro Bot", "Life is Strange", "Stalker: Shadow of Chernobyl", 
+            "Stalker 2: Heart of Chernobyl", "Stalker: Call of Pripyat", "Phoenix Wright: Ace Attorney", 
+            "Stardew Valley", "The Binding of Isaac: Rebirth", "Pokemon Gold/Silver/Crystal", 
+            "Pokemon Black 2/White 2", "Pokemon Ruby/Sapphire/Emerald", "Pokemon HeartGold/SoulSilver", 
+            "Bloodborne", "Batman: Arkham City", "Castlevania: Symphony of the Night", "Grand Theft Auto: San Andreas", 
+            "Grand Theft Auto: Vice City", "Grand Theft Auto 5", "The Legend of Zelda: A Link to the Past", 
+            "The Legend of Zelda: Breath of the Wild", "The Legend of Zelda: Ocarina of Time", 
+            "The Legend of Zelda: Wind Waker", "The Legend of Zelda: Majora's Mask", "Half Life", 
+            "Halo: Combat Evolved", "Halo 3", "Bioshock", "Dragon Quest VIII: Journey of the Cursed King", 
+            "Dragon Quest XI: Echoes of an Elusive Age", "Crash Bandicoot", "Spyro the Dragon", "Resident Evil 4", 
+            "Bioshock Infinite", "Shadow of the Colossus", "Phantasy Star IV: The End of the Millennium", 
+            "Metal Gear Solid", "Kingdom Hearts 2", "Metal Gear Solid 2: Sons of Liberty", "Metal Gear Solid 3: Snake Eater", 
+            "Metal Gear Solid 4: Guns of the Patriots", "Super Mario Bros. 3", "Super Mario World", "Super Mario Galaxy", 
+            "Super Mario 64", "Red Dead Redemption", "Red Dead Redemption 2", "The Last of Us", "The Last of Us Part II", 
+            "Shining Force", "Sonic The Hedgehog 2", "Sonic The Hedgehog 3", "Metaphor: ReFantazio", "Hollow Knight", 
+            "Hollow Knight: Silksong", "Dark Souls 3", "Dark Souls", "Elden Ring", "Baldur's Gate 3", "Cyberpunk 2077", 
+            "The Witcher 3: Wild Hunt", "The Witcher 2: Assassins of Kings", "Fallout: New Vegas", "Fallout 3", 
+            "Vampire Survivors", "Borderlands 2", "Death Stranding", "Ghost of Tsushima", "The Elder Scrolls IV: Oblivion", 
+            "The Elder Scrolls V: Skyrim", "Divinity: Original Sin 2", "Mass Effect", "Mass Effect 2", "Mass Effect 3", 
+            "Thief: Deadly Shadows", "Persona 5 Royal", "Persona 4 Golden", "Persona 3", "Disco Elysium", "Final Fantasy IX", 
+            "Final Fantasy X", "Final Fantasy VIII", "Final Fantasy VII", "Final Fantasy VI", "God of War (2018)", 
+            "God of War Ragnarök"
+        ];
 
-		<div id="main-table">
-			<div id="battle-number"></div>
-			<ul>
-				<li id="left-field" class="sort-field" data-amount="-1"></li>
-				<li id="middle-field" class="sort-field" data-amount="0"><p>I feel the same way about both</p></li>
-				<li id="right-field" class="sort-field" data-amount="1"></li>
-			</ul>
-		</div>
+        // Game ranking logic
+        let currentIndex = 0;
+        let battles = 0;
 
-		<div id="result-field"></div>
+        function updateBattleInfo() {
+            const totalBattles = games.length * (games.length - 1) / 2; // Total possible battles
+            const percentage = Math.round((battles / totalBattles) * 100);
+            document.getElementById('battle-number').innerHTML = `
+                <p>Battle #${battles + 1}</p>
+                <p>Progress: ${percentage}%</p>
+            `;
+        }
 
-		<button onclick="ranks.reset()">Reset</button>
-
-		<script>
-		'use strict';
-
-		// Pelilista
-		const games = [
-			"Clair Obscur: Expedition 33", "Kingdom Come: Deliverance 2", "Undertale", "Deltarune", "Portal 2", 
-			"Silent Hill 2", "Assassin's Creed II", "Assassin's Creed IV: Black Flag", "Chrono Trigger", 
-			"Alan Wake", "Fable", "Minecraft", "Astro Bot", "Life is Strange", "Stalker: Shadow of Chernobyl", 
-			"Stalker 2: Heart of Chernobyl", "Stalker: Call of Pripyat", "Phoenix Wright: Ace Attorney", 
-			"Stardew Valley", "The Binding of Isaac: Rebirth", "Pokemon Gold/Silver/Crystal", 
-			"Pokemon Black 2/White 2", "Pokemon Ruby/Sapphire/Emerald", "Pokemon HeartGold/SoulSilver", 
-			"Bloodborne", "Batman: Arkham City", "Castlevania: Symphony of the Night", "Grand Theft Auto: San Andreas", 
-			"Grand Theft Auto: Vice City", "Grand Theft Auto 5", "The Legend of Zelda: A Link to the Past", 
-			"The Legend of Zelda: Breath of the Wild", "The Legend of Zelda: Ocarina of Time", 
-			"The Legend of Zelda: Wind Waker", "The Legend of Zelda: Majora's Mask", "Half Life", 
-			"Halo: Combat Evolved", "Halo 3", "Bioshock", "Dragon Quest VIII: Journey of the Cursed King", 
-			"Dragon Quest XI: Echoes of an Elusive Age", "Crash Bandicoot", "Spyro the Dragon", "Resident Evil 4", 
-			"Bioshock Infinite", "Shadow of the Colossus", "Phantasy Star IV: The End of the Millennium", 
-			"Metal Gear Solid", "Kingdom Hearts 2", "Metal Gear Solid 2: Sons of Liberty", "Metal Gear Solid 3: Snake Eater", 
-			"Metal Gear Solid 4: Guns of the Patriots", "Super Mario Bros. 3", "Super Mario World", "Super Mario Galaxy", 
-			"Super Mario 64", "Red Dead Redemption", "Red Dead Redemption 2", "The Last of Us", "The Last of Us Part II", 
-			"Shining Force", "Sonic The Hedgehog 2", "Sonic The Hedgehog 3", "Metaphor: ReFantazio", "Hollow Knight", 
-			"Hollow Knight: Silksong", "Dark Souls 3", "Dark Souls", "Elden Ring", "Baldur's Gate 3", "Cyberpunk 2077", 
-			"The Witcher 3: Wild Hunt", "The Witcher 2: Assassins of Kings", "Fallout: New Vegas", "Fallout 3", 
-			"Vampire Survivors", "Borderlands 2", "Death Stranding", "Ghost of Tsushima", "The Elder Scrolls IV: Oblivion", 
-			"The Elder Scrolls V: Skyrim", "Divinity: Original Sin 2", "Mass Effect", "Mass Effect 2", "Mass Effect 3", 
-			"Thief: Deadly Shadows", "Persona 5 Royal", "Persona 4 Golden", "Persona 3", "Disco Elysium", "Final Fantasy IX", 
-			"Final Fantasy X", "Final Fantasy VIII", "Final Fantasy VII", "Final Fantasy VI", "God of War (2018)", 
-			"God of War Ragnarök"
-		];
-
-		class ranking {
-			constructor(entries, controls) {
-				this.reset(entries, controls);
-			}
-
-			reset(entries, controls) {
-				if (entries) this.namMember = entries;
-				if (this.namMember == null || this.namMember.length < 2) {
-					console.error('You need to provide an array of strings to be sorted!');
-					return;
-				}
-				this.lstMember = [];
-				this.parent = [];
-				this
+        function startBattle
