--- a/index.html
+++ b/index.html
@@ -521,7 +521,100 @@
 
 		const defaultTerms = {
 			'games': [
-				"Clair Obscur: Expedition 33","Kingdom Come: Deliverance 2","Undertale","Deltarune","Portal 2","Silent Hill 2","Assassin's Creed II","Assassin's Creed IV: Black Flag","Chrono Trigger","Alan Wake","Fable","Minecraft","Astro Bot","Life is Strange","Stalker: Shadow of Chernobyl","Stalker 2: Heart of Chernobyl","Stalker: Call of Pripyat","Phoenix Wright: Ace Attorney","Stardew Valley","The Binding of Isaac: Rebirth","Pokemon Gold/Silver/Crystal","Pokemon Black 2/White 2","Pokemon Ruby/Sapphire/Emerald","Pokemon HeartGold/SoulSilver","Bloodborne","Batman: Arkham City","Castlevania: Symphony of the Night","Grand Theft Auto: San Andreas","Grand Theft Auto: Vice City","Grand Theft Auto 5","The Legend of Zelda: A Link to the Past","The Legend of Zelda: Breath of the Wild","The Legend of Zelda: Ocarina of Time","The Legend of Zelda: Wind Waker","The Legend of Zelda: Majora's Mask","Half Life","Halo: Combat Evolved","Halo 3","Bioshock","Dragon Quest VIII: Journey of the Cursed King","Dragon Quest XI: Echoes of an Elusive Age","Crash Bandicoot","Spyro the Dragon","Resident Evil 4","Bioshock Infinite","Shadow of the Colossus","Phantasy Star IV: The End of the Millennium","Metal Gear Solid","Kingdom Hearts 2","Metal Gear Solid 2: Sons of Liberty","Metal Gear Solid 3: Snake Eater","Metal Gear Solid 4: Guns of the Patriots","Super Mario Bros. 3","Super Mario World","Super Mario Galaxy","Super Mario 64","Red Dead Redemption","Red Dead Redemption 2","The Last of Us","The Last of Us Part II","Shining Force","Sonic The Hedgehog 2","Sonic The Hedgehog 3","Metaphor: ReFantazio","Hollow Knight","Hollow Knight: Silksong","Dark Souls 3","Dark Souls","Elden Ring","Baldur's Gate 3","Cyberpunk 2077","The Witcher 3: Wild Hunt","The Witcher 2: Assassins of Kings","Fallout: New Vegas","Fallout 3","Vampire Survivors","Borderlands 2","Death Stranding","Ghost of Tsushima","The Elder Scrolls IV: Oblivion","The Elder Scrolls V: Skyrim","Divinity: Original Sin 2","Mass Effect","Mass Effect 2","Mass Effect 3","Thief: Deadly Shadows","Persona 5 Royal","Persona 4 Golden","Persona 3","Disco Elysium","Final Fantasy IX","Final Fantasy X","Final Fantasy VIII","Final Fantasy VII","Final Fantasy VI","God of War (2018)","God of War Ragnarök"
+				"Clair Obscur: Expedition 33",
+				"Kingdom Come: Deliverance 2",
+				"Undertale",
+				"Deltarune",
+				"Portal 2",
+				"Silent Hill 2",
+				"Assassin's Creed II",
+				"Assassin's Creed IV: Black Flag",
+				"Chrono Trigger",
+				"Alan Wake",
+				"Fable",
+				"Minecraft",
+				"Astro Bot",
+				"Life is Strange",
+				"Stalker: Shadow of Chernobyl",
+				"Stalker 2: Heart of Chernobyl",
+				"Stalker: Call of Pripyat",
+				"Phoenix Wright: Ace Attorney",
+				"Stardew Valley",
+				"The Binding of Isaac: Rebirth",
+				"Pokemon Gold/Silver/Crystal",
+				"Pokemon Black 2/White 2",
+				"Pokemon Ruby/Sapphire/Emerald",
+				"Pokemon HeartGold/SoulSilver",
+				"Bloodborne","Batman: Arkham City",
+				"Castlevania: Symphony of the Night",
+				"Grand Theft Auto: San Andreas",
+				"Grand Theft Auto: Vice City",
+				"Grand Theft Auto 5",
+				"The Legend of Zelda: A Link to the Past",
+				"The Legend of Zelda: Breath of the Wild",
+				"The Legend of Zelda: Ocarina of Time",
+				"The Legend of Zelda: Wind Waker",
+				"The Legend of Zelda: Majora's Mask",
+				"Half Life",
+				"Halo: Combat Evolved",
+				"Halo 3",
+				"Bioshock",
+				"Dragon Quest VIII: Journey of the Cursed King",
+				"Dragon Quest XI: Echoes of an Elusive Age",
+				"Crash Bandicoot",
+				"Spyro the Dragon",
+				"Resident Evil 4",
+				"Bioshock Infinite",
+				"Shadow of the Colossus",
+				"Phantasy Star IV: The End of the Millennium",
+				"Metal Gear Solid",
+				"Kingdom Hearts 2",
+				"Metal Gear Solid 2: Sons of Liberty",
+				"Metal Gear Solid 3: Snake Eater",
+				"Metal Gear Solid 4: Guns of the Patriots",
+				"Super Mario Bros. 3",
+				"Super Mario World",
+				"Super Mario Galaxy",
+				"Super Mario 64",
+				"Red Dead Redemption",
+				"Red Dead Redemption 2",
+				"The Last of Us",
+				"The Last of Us Part II",
+				"Shining Force",
+				"Sonic The Hedgehog 2",
+				"Sonic The Hedgehog 3",
+				"Metaphor: ReFantazio",
+				"Hollow Knight",
+				"Hollow Knight: Silksong",
+				"Dark Souls 3",
+				"Dark Souls",
+				"Elden Ring",
+				"Baldur's Gate 3",
+				"Cyberpunk 2077",
+				"The Witcher 3: Wild Hunt",
+				"The Witcher 2: Assassins of Kings",
+				"Fallout: New Vegas",
+				"Fallout 3",
+				"Vampire Survivors",
+				"Borderlands 2",
+				"Ghost of Tsushima",
+				"The Elder Scrolls IV: Oblivion",
+				"The Elder Scrolls V: Skyrim",
+				"Divinity: Original Sin 2",
+				"Mass Effect",
+				"Mass Effect 2",
+				"Mass Effect 3",
+				"Thief: Deadly Shadows",
+				"Persona 5 Royal",
+				"Persona 4 Golden",
+				"Persona 3",
+				"Disco Elysium",
+				"Final Fantasy IX",
+				"Final Fantasy X",,
+				"Final Fantasy VII",
+				"Final Fantasy VI",
+				"God of War (2018)",
+				"God of War Ragnarök"
 			]
 		}
 
