--- a/index.html
+++ b/index.html
@@ -545,7 +545,8 @@
 				"Pokemon Black 2/White 2",
 				"Pokemon Ruby/Sapphire/Emerald",
 				"Pokemon HeartGold/SoulSilver",
-				"Bloodborne","Batman: Arkham City",
+				"Bloodborne",
+				"Batman: Arkham City",
 				"Castlevania: Symphony of the Night",
 				"Grand Theft Auto: San Andreas",
 				"Grand Theft Auto: Vice City",
