--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 				"Persona 3",
 				"Disco Elysium",
 				"Final Fantasy IX",
-				"Final Fantasy X",,
+				"Final Fantasy X",
 				"Final Fantasy VII",
 				"Final Fantasy VI",
 				"God of War (2018)",
